--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 		<div class="cart_button">
-			<button type="button" name="button" (click)="addProductToCart(product.name, product.price);">Add to Cart</button>
+			<button type="button" name="button" (click)="addProductToCart(product.id, product.name, product.price);">Add to Cart</button>
 		</div>
 	</div>
 </div>
