--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -1,49 +1,43 @@
 .main_cart{
   padding-right: 20px;
+  height: 100%;
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+}
+.main_cart.active{
+  background: #ffb12b;
 }
 
 /*moving order form*/
-.moving_order_form{
+
+.container_order{
+
   color: black;
-  position: fixed;
-  right: 0; top: 50px;
-  width: 400px; height: 100%;
+  position: absolute;
+  right: 0; top: auto;
+  width: 400px;
   background: #FFF;
-  z-index: 100;
+  z-index: 109;
   transform: translateX(100%);
   transition: 0.5s;
-  padding: 20px;
+
 }
-.moving_order_form.show{
+.container_order.show{
   transform: translateX(0%);
 }
 
-.moving_order_form .menu_list{
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+.moving_order_form{
+height: calc(500px-50px);
   overflow-y: auto;
+  position: static;
+padding: 20px;
 }
 
-.moving_order_form .menu_item_wrapper{
-  position: relative;
-  margin: 30px;
-}
 
-.moving_order_form .menu_item{
-  position: absolute;
-  left: 0; top: 0;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 20px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: 0.1s;
-  color: #000;
-}
-.moving_order_form .menu_item:hover{
-  font-size: 25px;
+input.ng-touched.ng-invalid{
+ border-color: red;
 }
 /*-------------------------------*/
 .product{
@@ -52,14 +46,19 @@
   justify-content: space-around;
 }
 
+.plus_minus_product{
+  display: flex;
+  flex-direction: row;
+}
 /*-------------------------------*/
 
 .curtain{
-  position: fixed;
-  top: 60px; left: 0;
+  position: absolute;
+  top: auto; left: 0;
   width: 100%; height: 100vh;
   background: #000;
   transition: opacity 0.5s, visibility 0.5s;
+  z-index: 0;
 }
 .curtain.off{
   visibility: hidden;
