--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -7,47 +7,57 @@
   </div>
 </div>
 
-<div class="moving_order_form">
-  <div class="">
-    Cart
-  </div>
-  <div class="product" *ngFor="let product of products; index as i;">
-    <div class="product_name">
-      {{product.name}}
+<div class="container_order">
+  <div class="moving_order_form">
+    <div class="">
+      Cart
     </div>
-    <div class="product_price">
-      {{product.price}} x {{product.amount}}
+    <div class="product" *ngFor="let product of products; index as i;">
+      <div class="product_name">
+        {{product.name}}
+      </div>
+      <div class="product_price">
+        {{product.price}} x {{product.amount}}
+      </div>
+      <div class="plus_minus_product">
+        <button type="button" name="minus_product" (click)="this.cartService.deleteFromCart(product.id); ">-</button>
+        <div>
+          1
+        </div>
+        <button type="button" name="minus_product" (click)="this.cartService.addToCart(product.id, product.name, product.price);">+</button>
+      </div>
+    </div>
+    <form [formGroup]="orderForm" (ngSubmit)="onSubmit()">
+      <label for="name">Name</label>
+      <input type="text" id="name" formControlName="name" />
+      <br/><br/>
+
+      <label for="phone">Phone</label>
+      <input type="text" id="phone" formControlName="phone" />
+      <br/><br/>
+
+      <label for="address">Address</label>
+      <input type="text" id="address" formControlName="address" />
+      <br/><br/>
+
+      <label for="email">Email</label>
+      <input type="text" id="email" formControlName="email" />
+      <br/><br/>
+
+      <label for="comment">Comment</label>
+      <textarea rows="5" cols="45" name="text" formControlName="comment" ></textarea>
+      <br/><br/>
+
+      <p><input type="checkbox" name="policy" value="policy" checked> I agree to the processing of personal data</p>
+
+      <button type="submit">Make an order</button>
+    </form>
+    <div>
+   {{orderForm.value | json}}
     </div>
   </div>
-  <form [formGroup]="orderForm" (ngSubmit)="onSubmit()">
-    <label for="name">Name</label>
-    <input type="text" id="name" formControlName="name" />
-    <br/><br/>
-
-    <label for="phone">Phone</label>
-    <input type="text" id="phone" formControlName="phone" />
-    <br/><br/>
-
-    <label for="email">Email</label>
-    <input type="text" id="email" formControlName="email" />
-    <br/><br/>
-
-    <label for="address">Address</label>
-    <input type="text" id="address" formControlName="address" />
-    <br/><br/>
-
-    <label for="comment">Comment</label>
-    <textarea rows="10" cols="45" name="text" formControlName="comment" ></textarea>
-    <br/><br/>
-
-    <p><input type="checkbox" name="policy" value="policy" checked> I agree to the processing of personal data</p>
-
-    <button type="submit">Make an order</button>
-  </form>
-  <div>
- {{orderForm.value | json}}
 </div>
-</div>
+
 
 <div class="curtain off" (click)="showOrHideOrderForm()">
 </div>
