--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,5 +1,4 @@
 header{
-  padding: 10px;
   color: white;
   display: flex;
   flex-direction: row;
@@ -11,6 +10,7 @@ header{
   top: 0;
   width: 100%;
   z-index: 100;
+  height: 50px;
 }
 
 .site_name{
