--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -1,6 +1,3 @@
-<div class="menu_title">
-  Our products
-</div>
-<div class="menu-list">
+<div class="menu_list">
 <app-product-list></app-product-list>
 </div>
