--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -9,7 +9,7 @@
 					{{product.name}}
 				</div>
 				<div class="product_price">
-					{{product.price}} rub
+					{{product.price}} $
 				</div>
 			</div>
 			<div class="product_description">
