--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -1,63 +1,140 @@
 .main_cart{
-  padding-right: 20px;
   height: 100%;
+  width: 70px;
   cursor: pointer;
   display: flex;
   flex-direction: row;
-  margin: 0;
+  justify-content:center;
+  align-items: center;
 }
 .main_cart.active{
   background: #ffb12b;
 }
-
+.main_cart_icon{
+    position: relative;
+}
+.cart_counter{
+  font-size: 0.8em;
+  text-align: center;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  bottom:15px;
+  left: 20px;
+  border-radius: 50%;
+  background: red;
+}
 /*moving order form*/
 
-.container_order{
-
+.moving_order_form{
+  height: calc(100vh - 90px);
+  overflow-y: auto;
   color: black;
   position: absolute;
   right: 0; top: auto;
-  width: 400px;
   background: #FFF;
   z-index: 109;
   transform: translateX(100%);
   transition: 0.5s;
-
+  padding: 20px;
 }
-.container_order.show{
+.moving_order_form.show{
   transform: translateX(0%);
 }
 
-.moving_order_form{
-height: calc(500px-50px);
-  overflow-y: auto;
-  position: static;
-padding: 20px;
+.cart_title{
+  border-bottom: 1px solid black;
 }
-
+.total{
+  border-top: 1px solid black;
+}
 
 input.ng-touched.ng-invalid{
  border-color: red;
 }
+
+.error{
+  color: red;
+}
 /*-------------------------------*/
 .product{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 50% 35% 15%;
+  grid-gap: 10px;
+  padding: 10px 30px;
 }
 
 .plus_minus_product{
   display: flex;
   flex-direction: row;
 }
+
+.minus_product_button{
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+
+  -webkit-transition-duration: 0.2s; /* Safari */
+  transition-duration: 0.2s;
+  background-color: #ffd56b;
+  border: 2px solid #ffcc4a;
+  border-radius: 50%;
+  color: black;
+  outline:none;
+}
+
+.plus_product_button{
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+
+  -webkit-transition-duration: 0.2s; /* Safari */
+  transition-duration: 0.2s;
+  background-color: #ffd56b;
+  border: 2px solid #ffcc4a;
+  border-radius: 50%;
+  color: black;
+  outline:none;
+}
+
+.minus_product_button:active, .plus_product_button:active{
+	background-color: #ffcc4a;
+	border: 1px solid #ffcc4a;
+	transform: scale(0.85);
+}
+
+.make_an_order_button{
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+
+	-webkit-transition-duration: 0.2s; /* Safari */
+	transition-duration: 0.2s;
+	background-color: #ffd56b;
+	border: 2px solid #ffcc4a;
+	color: black;
+	outline:none;
+}
+
+
+.make_an_order_button:active{
+	background-color: #ffcc4a;
+		border: 1px solid #ffcc4a;
+	transform: scale(0.95);
+}
 /*-------------------------------*/
 
 .curtain{
   position: absolute;
   top: auto; left: 0;
-  width: 100%; height: 100vh;
+  width: 100%; height:100vh;
   background: #000;
-  transition: opacity 0.5s, visibility 0.5s;
+  transition: opacity 0.5s, visibility 0.1s;
   z-index: 0;
 }
 .curtain.off{
