--- a/src/app/components/product-list/product-list.component.css
+++ b/src/app/components/product-list/product-list.component.css
@@ -29,7 +29,7 @@
 
 .product_info{
 	padding: 10px;
-	margin-bottom: 30px;
+	margin-bottom: 50px;
 }
 
 
@@ -58,4 +58,29 @@
 	position: absolute;
 	bottom: 5px;
 	right: 20px;
+}
+
+.add_to_cart_button{
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+
+	-webkit-transition-duration: 0.2s; /* Safari */
+	transition-duration: 0.2s;
+	background-color: #ffd56b;
+	border: 2px solid #ffcc4a;
+	color: black;
+	outline:none;
+}
+
+.add_to_cart_button:hover{
+background-color: #ffcc4a;
+
+	transform: scale(1.05);
+}
+.add_to_cart_button:active{
+	background-color: #ffcc4a;
+		border: 1px solid #ffcc4a;
+	transform: scale(0.95);
 }
