--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -9,46 +9,60 @@
 
 
   <div class="moving_order_form">
-    <div class="cart_title">
-      Cart
-    </div>
-    <div class="product" *ngFor="let product of products; index as i;">
-      <div class="product_name">
-        {{product.name}}
+    <div class="cart_list">
+      <div class="cart_title">
+        Cart
       </div>
-      <div class="product_price">
-        {{product.price}}$ х {{product.amount}}
-      </div>
-
-      <div class="plus_minus_product">
-        <button class="minus_product_button" type="button" name="minus_product"
-        (click)="this.cartService.deleteFromCart(product.id);
-        this.products = this.cartService.getItems();
-        this.totalPrice = this.cartService.getTotalPrice()+this.delivery; ">-</button>
-        <div>
-          1
+      <div class="product" *ngFor="let product of products; index as i;">
+        <div class="product_name">
+          {{product.name}}
         </div>
-        <button class="plus_product_button" type="button" name="minus_product"
-        (click)="this.cartService.addToCart(product.id, product.name, product.price);
-        this.products = this.cartService.getItems();
-        this.totalPrice = this.cartService.getTotalPrice()+this.delivery;">+</button>
-      </div>
-    </div>
-    <div class="ifCartExist" *ngIf="this.products[0]; else emptyCart">
-      <div class="delivery">
-        delivery {{delivery}}$
-      </div>
-      <div class="total">
-        total: {{totalPrice}}$
-      </div>
-    </div>
-    <ng-template #emptyCart>Yout cart is empty</ng-template>
+        <div class="product_price">
+          {{product.price}}$ х {{product.amount}}
+        </div>
 
+        <div class="plus_minus_product">
+          <button class="minus_product_button" type="button" name="minus_product"
+          (click)="this.cartService.deleteFromCart(product.id);
+          this.products = this.cartService.getItems();
+          this.totalPrice = this.cartService.getTotalPrice()+this.delivery; ">-</button>
+          <div>
+            1
+          </div>
+          <button class="plus_product_button" type="button" name="minus_product"
+          (click)="this.cartService.addToCart(product.id, product.name, product.price);
+          this.products = this.cartService.getItems();
+          this.totalPrice = this.cartService.getTotalPrice()+this.delivery;">+</button>
+        </div>
+      </div>
+      <div class="ifCartExist" *ngIf="this.products[0]; else emptyCart">
+        <div class="delivery">
+          <div>
+            Delivery
+          </div>
+          <div>
+            {{delivery}}$
+          </div>
+        </div>
+        <div class="total">
+          <div>
+            Total:
+          </div>
+          <div class="total_price">
+            {{totalPrice}}$
+          </div>
+        </div>
+      </div>
+      <ng-template #emptyCart>Yout cart is empty</ng-template>
+    </div>
 
-    <form [formGroup]="orderForm" (ngSubmit)="onSubmit()">
+    <form class="order_form" [formGroup]="orderForm" (ngSubmit)="onSubmit()" *ngIf="this.cartCounter!=0">
+      <div class="order_form_title">
+        Fill out the order form
+      </div>
       <div class="form_element">
         <mat-form-field>
-        <input matInput type="text" id="name" formControlName="name" placeholder = "Name">
+        <input matInput type="text" formControlName="name" placeholder = "Name">
         </mat-form-field>
         <div class="error" *ngIf="isControlInvalid('name')">
           The name must consist only of English letters
@@ -56,7 +70,7 @@
       </div>
       <div class="form_element">
         <mat-form-field>
-        <input matInput type="text" id="phone" formControlName="phone" placeholder = "Phone">
+        <input matInput type="text" formControlName="phone" placeholder = "Phone">
         </mat-form-field>
         <div class="error" *ngIf="isControlInvalid('phone')">
           A phone number can only consist of numbers and a plus sign
@@ -64,7 +78,7 @@
       </div>
       <div class="form_element">
         <mat-form-field>
-        <input matInput type="text" id="address" formControlName="address" placeholder = "Address">
+        <input matInput type="text" formControlName="address" placeholder = "Address">
         </mat-form-field>
         <div class="error" *ngIf="isControlInvalid('address')">
           Please enter the delivery address
@@ -72,18 +86,13 @@
       </div>
 
       <div class="form_element">
-          <mat-checkbox color="primary"> I agree to the processing of personal data</mat-checkbox>
+          <mat-checkbox color="primary" value="true" [checked]="true" [disabled] = "true"> I agree to the processing of personal data</mat-checkbox>
       </div>
 
-
-      <button class="make_an_order_button" type="submit">Make an order</button>
+      <button class="place_an_order_button" type="submit">Place an order</button>
     </form>
-    <div class="successful_order">
-      Your order № 23 has been successfully placed! Wait for a call from the operator soon.
-    </div>
 
   </div>
-
 
 
 <div class="curtain off" (click)="showOrHideOrderForm()">
