--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -1,4 +1,5 @@
-.main_cart{
+/*----cart_icon_wrapper----*/
+.cart_icon_wrapper{
   height: 100%;
   width: 70px;
   cursor: pointer;
@@ -7,37 +8,41 @@
   justify-content:center;
   align-items: center;
 }
-.main_cart.active{
+.cart_icon_wrapper.active{
   background: #ffb12b;
 }
-.main_cart_icon{
-    position: relative;
+.cart_icon{
+  position: relative;
 }
 .cart_counter{
-  font-size: 0.8em;
-  text-align: center;
+  position: absolute;
+  bottom: 15px;
+  left: 20px;
   width: 18px;
   height: 18px;
-  position: absolute;
-  bottom:15px;
-  left: 20px;
   border-radius: 50%;
   background: red;
+  text-align: center;
+  font-size: 0.8em;
 }
-/*moving order form*/
 
+/*moving order form*/
 .moving_order_form{
-  width:500px;
+  width: 500px;
   height: calc(100vh - 90px);
-  overflow-y: auto;
-  color: black;
   position: absolute;
-  right: 0; top: auto;
-  background: #FFF;
-  z-index: 109;
-  transform: translateX(100%);
-  transition: 0.5s;
+  right: 0;
+  top: auto;
+  overflow-y: auto;
   padding: 20px;
+  z-index: 200;
+  transform: translateX(100%);
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  background: #FFF;
+  color: black;
 }
 .moving_order_form.show{
   transform: translateX(0%);
@@ -51,18 +56,73 @@
   border-bottom: 1px solid black;
   text-align: center;
 }
+
+.product{
+  display: grid;
+  align-items: center;
+  grid-template-columns: 70% 20% 10%;
+  grid-gap: 10px;
+  padding: 10px 30px;
+}
+.plus_minus_product{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.button_wrapper{
+
+  width: 20px;
+  height: 20px;
+}
+
+
+.minus_product_button, .plus_product_button{
+  position: relative;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  background-color: #ffd56b;
+  border: 2px solid #ffcc4a;
+  border-radius: 50%;
+  color: black;
+  outline:none;
+  position: relative;
+}
+
+.minus_product_button:active, .plus_product_button:active{
+	background-color: #ffcc4a;
+	border: 1px solid #ffcc4a;
+	transform: scale(0.85);
+}
+
+.delivery, .total{
+  display: grid;
+  grid-template-columns: 70% 20%;
+  grid-gap: 10px;
+  padding: 20px 30px 10px;
+}
+
 .total{
   border-top: 1px solid black;
   padding-top: 5px;
   margin-bottom: 20px;
 }
+
 .total_price{
   font-size: 1.1em;
   font-weight: bold;
 }
 
-input.ng-touched.ng-invalid{
- border-color: red;
+.empty_cart{
+    margin-top: 10px;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 /*--------order_form-----*/
@@ -90,80 +150,24 @@ input.ng-touched.ng-invalid{
   font-size: 0.8em;
 }
 
-/*-------------------------------*/
-.product{
-  display: grid;
-  align-items: center;
-  grid-template-columns: 70% 20% 10%;
-  grid-gap: 10px;
-  padding: 10px 30px;
+input.ng-touched.ng-invalid{
+ border-color: red;
 }
 
-.plus_minus_product{
-  display: flex;
-  flex-direction: row;
-}
-
-.minus_product_button{
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-
-  -webkit-transition-duration: 0.2s; /* Safari */
-  transition-duration: 0.2s;
-  background-color: #ffd56b;
-  border: 2px solid #ffcc4a;
-  border-radius: 50%;
-  color: black;
-  outline:none;
-}
-
-.plus_product_button{
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-
-  -webkit-transition-duration: 0.2s; /* Safari */
-  transition-duration: 0.2s;
-  background-color: #ffd56b;
-  border: 2px solid #ffcc4a;
-  border-radius: 50%;
-  color: black;
-  outline:none;
-}
-
-.minus_product_button:active, .plus_product_button:active{
-	background-color: #ffcc4a;
-	border: 1px solid #ffcc4a;
-	transform: scale(0.85);
-}
-/*-----*/
-.delivery, .total{
-  display: grid;
-  grid-template-columns: 70% 20%;
-  grid-gap: 10px;
-  padding: 20px 30px 10px;
-}
-
-
-/*------------------------------*/
 .place_an_order_button{
 	padding: 10px 20px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-
-	-webkit-transition-duration: 0.2s; /* Safari */
+	-webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
 	transition-duration: 0.2s;
 	background-color: #ffd56b;
 	border: 2px solid #ffcc4a;
 	color: black;
 	outline:none;
-   border-radius: 6px;
+  border-radius: 6px;
 }
 
 .place_an_order_button:active{
@@ -171,15 +175,18 @@ input.ng-touched.ng-invalid{
 	border: 1px solid #ffcc4a;
 	transform: scale(0.95);
 }
-/*-------------------------------*/
+/*------curtain-------------------*/
 
 .curtain{
   position: absolute;
   top: auto; left: 0;
-  width: 100%; height:100vh;
+  width: 100%; height: 100vh;
   background: #000;
+  z-index: 100;
+  -webkit-transition: opacity 0.5s, visibility 0.1s;
+  -moz-transition: opacity 0.5s, visibility 0.1s;
+  -o-transition: opacity 0.5s, visibility 0.1s;
   transition: opacity 0.5s, visibility 0.1s;
-  z-index: 0;
 }
 .curtain.off{
   visibility: hidden;
