--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -16,6 +16,8 @@ header{
 .site_name{
   font-size: 2em;
   font-style: italic;
-  font-weight: bold;
+  font-weight: 400;
   text-align: center;
+  padding: 5px 10px;
+  cursor: default;
 }
