--- a/src/app/components/product-list/product-list.component.css
+++ b/src/app/components/product-list/product-list.component.css
@@ -5,35 +5,35 @@
 	flex-wrap: wrap;
 }
 
-.product{
+.product_card{
+	cursor: default;
 	position: relative;
 	margin: 20px;
 	width: 270px;
-	cursor: pointer;
-	transition: 0.3s;
+	-webkit-transition-duration: 0.3s;
+	-moz-transition-duration: 0.3s;
+	-o-transition-duration: 0.3s;
+	transition-duration: 0.3s;
 	background-color: white;
 	border-radius: 15px 15px 0 0;
-}
-.product:hover{
-	box-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
-.product:focus{
 	outline: none;
 }
+.product_card:hover{
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
 
-.product_image{
+.product_card_image{
 	height: 100%;
 	width: 100%;
 	border-radius: 15px 15px 0 0 ;
 }
 
-.product_info{
+.product_card_content{
 	padding: 10px;
 	margin-bottom: 50px;
 }
 
-
-.horizontal_flexbox{
+.row_flexbox{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -65,23 +65,24 @@
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-
 	-webkit-transition-duration: 0.2s; /* Safari */
+	-moz-transition-duration: 0.2s;
+	-o-transition-duration: 0.2s;
 	transition-duration: 0.2s;
 	background-color: #ffd56b;
 	border: 2px solid #ffcc4a;
 	color: black;
 	outline:none;
-	  border-radius: 6px;
+	border-radius: 6px;
+	cursor: pointer;
 }
 
 .add_to_cart_button:hover{
-background-color: #ffcc4a;
-
+	background-color: #ffcc4a;
 	transform: scale(1.05);
 }
 .add_to_cart_button:active{
 	background-color: #ffcc4a;
-		border: 1px solid #ffcc4a;
+	border: 1px solid #ffcc4a;
 	transform: scale(0.95);
 }
