--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap');
 
-body{
-  margin: 0;
-  font-family:  Open Sans Condensed;
-  background-color: #ededed;
-}
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #ededed;
+}
